--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" type="text/css" href="style.css"/>
     <link rel="ico" href="coin.ico" type="image/ico">
     <title>Hello World</title>
-    <h1>Hollo World</h1>
+   
 </head>
 <body>
+    <h1>Hollo World</h1>
+</body>
+</html>
