--- a/index.html
+++ b/index.html
@@ -8,10 +8,29 @@
     <meta name="description" content="Мій новий сайт.Оцініть.">
     <link rel="stylesheet" type="text/css" href="style.css"/>
     <link rel="ico" href="coin.ico" type="image/ico">
-    <title>Hello World</title>
-   
+    <title>My_Site</title>
 </head>
 <body>
-    <h1>Hollo World</h1>
+
+
+    
+    <header>
+<a href="index.html" title="Main" class="logo">Test-Site</a>
+<a href="about.html" title="Information"><span class="contact">About us</span></a>
+<input type="search" class="field" placeholder="Help in search"/>
+<span class="right"></span>
+<a href="register.html" title="New register"><span class="contact">Registration</span></a>
+<a href="enter.html" title="Enter"><span class="contact">Enter</span></a>
+    </header>
+
+
+    <footer>
+
+
+    </footer>
+
+
+
+
 </body>
 </html>
